force-app/main/default/objects/ROM_Store_Visit_Report__c/ROM_Store_Visit_Report__c.object-meta.xml
<CustomObject>
    <description>This is the object for the ROM store visit updates.</description>
    <label>ROM Store Visit Report</label>
    <nameField>
        <displayFormat>ROM - {000000}</displayFormat>
        <label>ROM Visit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ROM Store Visit Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>