force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Account.</description>
    <inlineHelpText>Please lookup the related Account.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Rom_Store_Visit_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>