force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <formula>Account__r.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the seven digit account number.</inlineHelpText>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>