force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Account_Receivables__c.field-meta.xml
<CustomField>
    <fullName>Account_Receivables__c</fullName>
    <description>Accounts Receivables collection efforts Accounts Receivables collection efforts Accounts Receivables collection efforts recorded in A/R notes.  A/R’s over 90 days with balances of $5,000+.</description>
    <inlineHelpText>Accounts Receivables collection efforts recorded in A/R notes.  A/R’s over 90 days with balances of $5,000+.</inlineHelpText>
    <label>Account Receivables</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>