force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Additional_Shoenobile_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Shoenobile_Comments__c</fullName>
    <description>Additional Shoemobile comments.</description>
    <inlineHelpText>Please enter any additional Shoemobile comments.</inlineHelpText>
    <label>Additional Shoemobile Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>