force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Bank_Deposits__c.field-meta.xml
<CustomField>
    <fullName>Bank_Deposits__c</fullName>
    <description>Bank deposits conducted daily &amp; sent to RW weekly (Monday&apos;s).</description>
    <inlineHelpText>Bank deposits conducted daily &amp; sent to RW weekly (Monday&apos;s).</inlineHelpText>
    <label>Bank Deposits</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>