force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Cash_Declared_Accurately__c.field-meta.xml
<CustomField>
    <fullName>Cash_Declared_Accurately__c</fullName>
    <description>Cash declared accurately/daily with overs/shorts recovered.</description>
    <inlineHelpText>Cash declared accurately/daily with overs/shorts recovered.</inlineHelpText>
    <label>Cash Declared Accurately</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>