force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Cash_Drawer_Secure__c.field-meta.xml
<CustomField>
    <fullName>Cash_Drawer_Secure__c</fullName>
    <description>Cash drawer locked at all times, Petty cash at end of day in back.</description>
    <inlineHelpText>Cash drawer locked at all times, Petty cash at end of day in back.</inlineHelpText>
    <label>Cash Drawer Secure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>