force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Checkview_Security__c.field-meta.xml
<CustomField>
    <fullName>Checkview_Security__c</fullName>
    <description>Checkview security/surveillance equipment operating - quarterly test.</description>
    <inlineHelpText>Checkview security/surveillance equipment operating - quarterly test.</inlineHelpText>
    <label>Checkview Security</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>