force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Correct_Decals__c.field-meta.xml
<CustomField>
    <fullName>Correct_Decals__c</fullName>
    <description>Correct decals on trucks - Shoemobiles have the current Red Wing Chassis and box logo/wrap.  Verify correct phone numbers and DOT number on truck.</description>
    <inlineHelpText>Correct decals on trucks - Shoemobiles have the current Red Wing Chassis and box logo/wrap.  Verify correct phone numbers and DOT number on truck.</inlineHelpText>
    <label>Correct Decals</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>