force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Crisis_MGT_Communicated__c.field-meta.xml
<CustomField>
    <fullName>Crisis_MGT_Communicated__c</fullName>
    <description>Crisis Management team/process communicated to store staff.</description>
    <inlineHelpText>Crisis Management team/process communicated to store staff.</inlineHelpText>
    <label>Crisis MGT Communicated</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>