force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/DOT_Regulations_Current__c.field-meta.xml
<CustomField>
    <fullName>DOT_Regulations_Current__c</fullName>
    <description>DOT Regulations - Preventative Maintenance - Shoemobiles scheduled for preventative maintenance on a regular basis and the scheduled dates are posted to Outlook calendar.</description>
    <inlineHelpText>DOT Regulations - Preventative Maintenance - Shoemobiles scheduled for preventative maintenance on a regular basis and the scheduled dates are posted to Outlook calendar.</inlineHelpText>
    <label>DOT Regulations Current</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>