force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Employee_Training_Current__c.field-meta.xml
<CustomField>
    <fullName>Employee_Training_Current__c</fullName>
    <description>Employee Emod training up-to-date.</description>
    <inlineHelpText>Employee Emod training up-to-date.</inlineHelpText>
    <label>Employee Training Current</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>