force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Immediate_Action_items__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Action_items__c</fullName>
    <description>Please enter any immediate action items.</description>
    <inlineHelpText>Please enter any immediate action items.</inlineHelpText>
    <label>Immediate Action items</label>
    <length>255</length>
    <type>Text</type>
</CustomField>