force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Log_Book_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Log_Book_Reviewed__c</fullName>
    <description>Driver Logs in Use - Each shoemobile driver is maintaining the required truck log and doing the required truck inspections daily.</description>
    <inlineHelpText>Driver Logs in Use - Each shoemobile driver is maintaining the required truck log and doing the required truck inspections daily.</inlineHelpText>
    <label>Log Book Reviewed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>