force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Merchandising_VS_Comments__c.field-meta.xml
<CustomField>
    <fullName>Merchandising_VS_Comments__c</fullName>
    <description>Does the store meet the minimum requirements on Merchandising &amp; Visual Standards?</description>
    <inlineHelpText>Refer to Dealer Support Catalog. Does the store meet the minimum requirements on Merchandising &amp; Visual Standards?</inlineHelpText>
    <label>Merchandising &amp; VS Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>