force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Most_Recent_RWfB_Communication_Posted__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_RWfB_Communication_Posted__c</fullName>
    <description>Indicates whether or not the store has posted the most recent RWfB communication.</description>
    <inlineHelpText>Has the store posted the most recent RWfB communication?</inlineHelpText>
    <label>Most Recent RWfB Communication Posted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>