force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Operational_Comments__c.field-meta.xml
<CustomField>
    <fullName>Operational_Comments__c</fullName>
    <description>This stores the operational comments.</description>
    <inlineHelpText>Please enter any additional store comments.</inlineHelpText>
    <label>Operational Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>