force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Overtime_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Reviewed__c</fullName>
    <description>Overtime hours exceeding 44/week approved by ROM.</description>
    <inlineHelpText>Overtime hours exceeding 44/week approved by ROM.</inlineHelpText>
    <label>Overtime Reviewed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>