force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Packing_Slips_Updated__c.field-meta.xml
<CustomField>
    <fullName>Packing_Slips_Updated__c</fullName>
    <description>Packing slips contain initials of associates receiving product in file.</description>
    <inlineHelpText>Packing slips contain initials of associates receiving product in file.</inlineHelpText>
    <label>Packing Slips Updated</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>