force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/PCI_Compliant__c.field-meta.xml
<CustomField>
    <fullName>PCI_Compliant__c</fullName>
    <description>Shredder, File cabinet and credit card imprinter in operating condition.  No credit card numbers written in rolodexes or stored on spreadsheets at POS.</description>
    <inlineHelpText>Shredder, File cabinet and credit card imprinter in operating condition. No credit card numbers written in rolodexes or stored on spreadsheets at POS.</inlineHelpText>
    <label>PCI Compliant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>