force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Physical_Address__c.field-meta.xml
<CustomField>
    <fullName>Physical_Address__c</fullName>
    <description>This is the physical address.</description>
    <formula>Account__r.M3_Location_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the physical address from the account.</inlineHelpText>
    <label>Physical Address</label>
    <type>Text</type>
</CustomField>