force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Proper_Dress_Code__c.field-meta.xml
<CustomField>
    <fullName>Proper_Dress_Code__c</fullName>
    <description>Proper dress code (refer to employee handbook).</description>
    <inlineHelpText>Proper dress code (refer to employee handbook).</inlineHelpText>
    <label>Proper Dress Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>