force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Refunds_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Refunds_Reviewed__c</fullName>
    <description>Refunds reviewed – 10 transactions, include documentation (refund analysis).</description>
    <inlineHelpText>Refunds reviewed – 10 transactions, include documentation (refund analysis).</inlineHelpText>
    <label>Refunds Reviewed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>