force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Review_Monthly_Schedules__c.field-meta.xml
<CustomField>
    <fullName>Review_Monthly_Schedules__c</fullName>
    <description>Review monthly schedules for maximum productivity/SPH.</description>
    <inlineHelpText>Review monthly schedules for maximum productivity/SPH.</inlineHelpText>
    <label>Review Monthly Schedules</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>