force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Review_Negative_Reports__c.field-meta.xml
<CustomField>
    <fullName>Review_Negative_Reports__c</fullName>
    <description>Review negative detail reports.</description>
    <inlineHelpText>Review negative detail reports.</inlineHelpText>
    <label>Review Negative Reports</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>