force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Review_Open_Docs__c.field-meta.xml
<CustomField>
    <fullName>Review_Open_Docs__c</fullName>
    <description>Review all Open Documents:  Transfer ins, Transfer outs, In-transit invoices - investigate OPN items exceeding 10 days.</description>
    <inlineHelpText>Review all Open Documents:  Transfer ins, Transfer outs, In-transit invoices - investigate OPN items exceeding 10 days.</inlineHelpText>
    <label>Review Open Docs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>