force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Review_Redline_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Review_Redline_Inventory__c</fullName>
    <description>Review Redline &amp; Inventory Management (refer to SOP).</description>
    <inlineHelpText>Review Redline &amp; Inventory Management (refer to SOP).</inlineHelpText>
    <label>Review Redline &amp; Inventory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>