force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Review_SOP__c.field-meta.xml
<CustomField>
    <fullName>Review_SOP__c</fullName>
    <description>Review Standard Operating Procedure (SOP).</description>
    <inlineHelpText>Review Standard Operating Procedure (SOP).</inlineHelpText>
    <label>Review SOP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>