force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Review_Wall_Count__c.field-meta.xml
<CustomField>
    <fullName>Review_Wall_Count__c</fullName>
    <description>Review prior months Wall Counts address variances - select one style for accuracy.</description>
    <inlineHelpText>Review prior months Wall Counts address variances - select one style for accuracy.</inlineHelpText>
    <label>Review Wall Count</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>