force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/ROM_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>ROM_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Please enter the name of the ROM who visited the store.</description>
    <inlineHelpText>Please enter the name of the ROM who visited the store.</inlineHelpText>
    <label>ROM Contact Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Rom_Store_Visit_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>