force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/ROM_Current_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>ROM_Current_Visit_Date__c</fullName>
    <description>Date the ROM did the store visit</description>
    <inlineHelpText>Date the in store visit was done.</inlineHelpText>
    <label>ROM Current Visit Date</label>
    <type>Date</type>
</CustomField>