force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/ROM_Last_Visit__c.field-meta.xml
<CustomField>
    <fullName>ROM_Last_Visit__c</fullName>
    <formula>Account__r.ROM_Last_Visit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ROM Last Visit</label>
    <type>Date</type>
</CustomField>