force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/ROM_Phone__c.field-meta.xml
<CustomField>
    <fullName>ROM_Phone__c</fullName>
    <description>This is the ROM phone number.</description>
    <formula>ROM_Contact_Name__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is pulled from the ROM contact number.</inlineHelpText>
    <label>ROM Phone</label>
    <type>Text</type>
</CustomField>