force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/RWfB_Communication_Binder_Current__c.field-meta.xml
<CustomField>
    <fullName>RWfB_Communication_Binder_Current__c</fullName>
    <description>Indicates whether or not the store RWfB binder is current.</description>
    <inlineHelpText>Is the stores RWfB binder current?</inlineHelpText>
    <label>RWfB Communication Binder Current</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>