force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Security_Installed__c.field-meta.xml
<CustomField>
    <fullName>Security_Installed__c</fullName>
    <description>Babaco security system installed an in working order - test quarterly.</description>
    <inlineHelpText>Babaco security system installed an in working order - test quarterly.</inlineHelpText>
    <label>Security Installed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>