force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Shoe_Repair_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Shoe_Repair_Reviewed__c</fullName>
    <description>Shoe Repair precollected and worn defects reviewed.  Verify credit memo&apos;s match RMM&apos;s processed.</description>
    <inlineHelpText>Shoe Repair precollected and worn defects reviewed.  Verify credit memo&apos;s match RMM&apos;s processed.</inlineHelpText>
    <label>Shoe Repair Reviewed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>