force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>This field is to show the status of the report and to allow the ROM to trigger the workflow rules when ready by changing the status.</description>
    <inlineHelpText>When the report is put into &quot;Completed&quot; status and saved an email notifications of the report is automatically sent to RD, Director of Dealer Ops and ROM.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Process</fullName>
                <default>true</default>
                <label>In Process</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>