force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Store_Filing_System__c.field-meta.xml
<CustomField>
    <fullName>Store_Filing_System__c</fullName>
    <description>Store filing system implemented (refer to SOP for details).</description>
    <inlineHelpText>Store filing system implemented (refer to SOP for details).</inlineHelpText>
    <label>Store Filing System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>