force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Store_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Store_Manager_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This is the store manager name.</description>
    <inlineHelpText>Please enter the store manager name.</inlineHelpText>
    <label>Store Manager Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Rom_Store_Visit_Reports</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>