force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Store_Manager_Phone__c.field-meta.xml
<CustomField>
    <fullName>Store_Manager_Phone__c</fullName>
    <description>This is the store manager phone number.</description>
    <formula>Store_Manager_Name__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the phone # pulled from the store manager contact record.</inlineHelpText>
    <label>Store Manager Phone</label>
    <type>Text</type>
</CustomField>