force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Store_Number__c.field-meta.xml
<CustomField>
    <fullName>Store_Number__c</fullName>
    <formula>Account__r.Store_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store Number</label>
    <type>Text</type>
</CustomField>