force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Store_Presentation_Standards_Met__c.field-meta.xml
<CustomField>
    <fullName>Store_Presentation_Standards_Met__c</fullName>
    <description>Did the Store Presentation meet Red Wing standards?</description>
    <inlineHelpText>Did the Store Presentation meet Red Wing standards?</inlineHelpText>
    <label>Store Presentation Standards Met</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>