force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Unclaimed_Order_Returned__c.field-meta.xml
<CustomField>
    <fullName>Unclaimed_Order_Returned__c</fullName>
    <description>Unclaimed special orders returned to Red Wing prior to 30 days deadline.</description>
    <inlineHelpText>Unclaimed special orders returned to Red Wing prior to 30 days deadline.</inlineHelpText>
    <label>Unclaimed Order Returned</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>