force-app/main/default/objects/ROM_Store_Visit_Report__c/fields/Verify_Fitting_Stool_Leads__c.field-meta.xml
<CustomField>
    <fullName>Verify_Fitting_Stool_Leads__c</fullName>
    <description>Verify fitting stool lead forms are displayed near seating area.</description>
    <inlineHelpText>Verify fitting stool lead forms are displayed near seating area.</inlineHelpText>
    <label>Verify Fitting Stool Leads</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>