force-app/main/default/objects/ROM_Store_Visit_Report__c/listViews/Great_Lakes_Region.listView-meta.xml
<ListView>
    <fullName>Great_Lakes_Region</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Store_Number__c</columns>
    <columns>Store_Manager_Name__c</columns>
    <columns>Status__c</columns>
    <columns>ROM_Last_Visit__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Jim Pribyl,Robert Ferrari</value>
    </filters>
    <label>Great Lakes Region</label>
    <sharedTo>
        <group>Region_Central</group>
        <role>Sr_VP_Sales_Ops_Work_Hunt</role>
        <role>VP_NA_Sales_Ops_Work_Hunt</role>
    </sharedTo>
</ListView>